# trader-public

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  config.example.hpp  main.cpp
Trader/: CMakeLists.txt  Trader.hpp
Trader/Exchange/: ConfigurationExchange.hpp  Exchange.cpp  Exchange.hpp  ExchangeMock.hpp  ExchangeReadOnly.hpp
Trader/Exchange/Balance/: Balance.cpp  Balance.hpp  BalanceMovements.cpp  BalanceMovements.hpp
Trader/Exchange/Currency/: Currency.cpp  Currency.hpp  CurrencyImpl.hpp
Trader/Exchange/Event/: EventManager.cpp  EventManager.hpp
Trader/Exchange/Operation/: Operation.cpp  Operation.hpp  OperationContext.cpp  OperationContext.hpp  OperationOrder.cpp  OperationOrder.hpp
Trader/Exchange/Order/: Order.cpp  Order.hpp  TrackOrder.cpp  TrackOrder.hpp  TrackOrderList.cpp  TrackOrderList.hpp
Trader/Exchange/Transaction/: Boundaries.cpp  Boundaries.hpp  PairTransaction.cpp  PairTransaction.hpp  PairTransactionMap.cpp  PairTransactionMap.hpp  Transaction.cpp  Transaction.hpp  WithdrawTransaction.cpp  WithdrawTransaction.hpp
Trader/ExchangeImpl/Bitfinex/: ExchangeBitfinex.cpp  ExchangeBitfinex.hpp
Trader/ExchangeImpl/Bitstamp/: ExchangeBitstamp.cpp  ExchangeBitstamp.hpp
Trader/ExchangeImpl/Coinbase/: ExchangeCoinbase.cpp  ExchangeCoinbase.hpp
Trader/ExchangeImpl/Kraken/: ExchangeKraken.cpp  ExchangeKraken.hpp
Trader/ExchangeImpl/Test/: ExchangeTest.cpp  ExchangeTest.hpp
Trader/ExchangeImpl/Wex/: ExchangeWex.cpp  ExchangeWex.hpp
Trader/Generic/Configuration/: Configuration.hpp
Trader/Generic/Event/: Context.cpp  Context.hpp  EventContainer.hpp
Trader/Generic/Id/: Id.cpp  Id.hpp
Trader/Manager/: Manager.cpp  Manager.hpp
Trader/Server/: Server.cpp  Server.hpp
Trader/Server/EndPoint/: Exchange.cpp  Exchange.hpp  Manager.cpp  Manager.hpp  Strategy.cpp  Strategy.hpp
Trader/Strategy/: ConfigurationStrategy.hpp  Strategy.cpp  Strategy.hpp
Trader/Strategy/Dummy/: Dummy.cpp  Dummy.hpp
Trader/Strategy/SwingTrading/: SwingTrading.cpp  SwingTrading.hpp
Trader/tests/: CMakeLists.txt  TestBase.cpp  TestBase.hpp  TestOrder.cpp  TestPairTransactionMap.cpp  TestTrackOrderList.cpp  TestTransaction.cpp
install/: googlecloud_debian9_minimal.sh
www/: index.html
www/css/: view.css
www/js/: exchange.js  jquery.irPlot.js  jquery.irTable.js  strategy.js  trader.js  view.js
www/new/: index.html  irrequire.deps.js
www/new/assets/page/: app.js
www/new/assets/page/css/: style.css
www/new/assets/trader/: balance.js  exchange.js  interval.js  manager.js  strategy.js  time-series.js
www/new/assets/vue-components/balance/: style.css  vue.js
www/new/assets/vue-components/chart/: vue.js
www/new/assets/vue-components/exchange-orders/: style.css  vue.js
www/new/lib/irajax/: irajax.js
www/new/lib/irrequire/: irrequire.min.js  irrequire.progress.js
(+15 files in other folders)
